# Rythe-Standard-Library

./: .gitignore  .gitmodules  .rythe_project  CMakeLists.txt  Delegate.h  DelegateBase.h  MultiCastDelegate.h  README.md  build-rsl.lua  build-rythe-standard-library.lua  premake5.lua  rsl.sln
src/: delegate  delegate.hpp  delegate_base.hpp  multicast_delegate.hpp
src/rsl/: array  build-rsl.lua  cli  concepts  constexpr_string  containers  delegate  delete_me.cpp  dynamic_array  hashed_string  heap_allocator  logging  map  math  memory  meta  platform  primitives  rsl.vcxproj  rsl.vcxproj.filters  string_util  time  type_map  type_traits  utilities
src/rsl/impl/: defines.hpp  pch.hpp
src/rsl/impl/containers/: any.hpp  array.hpp  basic_iterators.hpp  buffered_list.hpp  buffered_list.inl  buffered_string.hpp  buffered_string.inl  constexpr_string.hpp  contiguous_container_base.hpp  contiguous_container_base.inl  delegate.hpp  delegate.inl  delegate_base.hpp  delegate_base.inl  dynamic_array.hpp  dynamic_array.inl  hash_map.hpp  hash_map.inl  hashed_sparse_set.hpp  hashed_string.hpp  hashed_string.inl  iterator_tricks.hpp  iterators.hpp  memory_resource_base.hpp  memory_resource_base.inl  multicast_delegate.hpp  multicast_delegate.inl  optional.hpp  optional.inl  pair.hpp  pair.inl  sequence_container_base.hpp  span.hpp  static_array.hpp  string.cpp  string.hpp  string.inl  string_literal.hpp  string_view.hpp  type_map.hpp  (+2 more)
src/rsl/impl/filesystem/: drive_filesystem_provider.cpp  drive_filesystem_provider.hpp  drive_filesystem_provider.inl  file_solution.hpp  file_solution.inl  filesystem_error.hpp  filesystem_provider.cpp  filesystem_provider.hpp  filesystem_provider.inl  filesystem_registry.cpp  filesystem_registry.hpp  filesystem_registry.inl  path_util.hpp  path_util.inl  traits.hpp  view.cpp  view.hpp  view.inl
src/rsl/impl/logging/: fmt_include.hpp  formatter.cpp  formatter.hpp  formatter.inl  logger.cpp  logger.hpp  logger.inl  logging.cpp  logging.hpp  logging.inl  message.hpp  severity.hpp  sink.hpp  sink.inl  spdlog_include.hpp
src/rsl/impl/math/: color.hpp  constants.hpp  geometry.hpp  trigonometry.hpp
src/rsl/impl/memory/: allocator.cpp  allocator.hpp  allocator.inl  allocator_context.cpp  allocator_context.hpp  allocator_context.inl  allocator_storage.cpp  allocator_storage.hpp  allocator_storage.inl  factory.cpp  factory.hpp  factory.inl  factory_storage.hpp  factory_storage.inl  heap_allocator.hpp  heap_allocator.inl  index_allocator.hpp  index_allocator.inl  managed_resource.hpp  managed_resource.inl  memory.cpp  memory.hpp  memory.inl  memory_error.hpp  memory_pool.hpp  memory_pool.inl  memory_resource_base.hpp  memory_resource_base.inl  mock_allocator.hpp  reference_counter.cpp  reference_counter.hpp  reference_counter.inl  stl_compatibility.hpp  stl_compatibility.inl  typed_allocator.hpp  typed_allocator.inl  unique_object.hpp  unique_object.inl  unique_resource.hpp  unique_resource.inl
src/rsl/impl/platform/: platform.hpp  platform_dependent_var.hpp
src/rsl/impl/threading/: current_thread.cpp  current_thread.hpp  current_thread.inl  thread.cpp  thread.hpp  thread_id.hpp
src/rsl/impl/time/: stopwatch.cpp  stopwatch.hpp  time_point.cpp  time_point.hpp  time_span.hpp
src/rsl/impl/util/: assert.cpp  assert.hpp  cli_parser.hpp  common.cpp  common.hpp  concepts.hpp  container_util.hpp  enum_flags.hpp  error_handling.cpp  error_handling.hpp  error_handling.inl  fnv1a.inl  hash.cpp  hash.hpp  hash.inl  meta.hpp  primitives.hpp  robin_hash.inl  source_location.hpp  string_util.hpp  string_util.inl  type_traits.hpp  type_util.hpp  utilities.hpp
src/rythe/: concepts  concepts.hpp  containers  delegate  delegate.hpp  delegate_base.hpp  delete_me.cpp  hash  multicast_delegate.hpp  primitives  primitives.hpp  time  type_util  type_util.hpp  utilities
src/rythe-standard-library/: rythe-standard-library.vcxproj  rythe-standard-library.vcxproj.filters
src/rythe/impl/: concepts.hpp  defines.hpp  delegate.hpp  delegate_base.hpp  hash.hpp  multicast_delegate.hpp  primitives.hpp  stopwatch.hpp  time_span.hpp  type_util.hpp  utilities.hpp
src/rythe/impl/containers/: buffered_string.hpp  delegate_base.hpp
src/rythe/impl/logging/: logger.cpp  logger.hpp  logging.hpp
src/rythe/impl/time/: time_span.hpp
src/rythe/impl/util/: assert.hpp  (+5 more)
tests/: CMakeLists.txt  test_all.cpp  test_delegates.cpp  test_dynamic_array.cpp  test_map.cpp  test_math.cpp  test_memory.cpp  test_string.cpp  test_type_map.cpp
(+188 files in other folders)
